test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/compare_void_ptr_to_int.plx
pub fn main(none) i32 {
    return cast<*any>(0) == 20ul #  you can't compare pointers to ints
}
